objects/box__BoxSignSettings__c/box__BoxSignSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Box Sign Settings</label>
</CustomObject>