objects/box__BoxSignSettings__c/fields/box__Disable_Files_Sync_to_Salesforce__c.field-meta.xml
<CustomField>
    <fullName>box__Disable_Files_Sync_to_Salesforce__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Files Sync to Salesforce</label>
    <type>Checkbox</type>
</CustomField>