objects/box__BoxSignSettings__c/fields/box__team_domain__c.field-meta.xml
<CustomField>
    <fullName>box__team_domain__c</fullName>
    <defaultValue>&quot;https://signrequest.com&quot;</defaultValue>
    <label>team domain</label>
    <type>Url</type>
</CustomField>